--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ var model = {
     gameOver: function() {
         var style = new PIXI.TextStyle({ //стили для текста
             fill: '0xffffff',
-            fontSize: 36,
+            fontSize: '6vw',
         }); 
         var gameOverText = new PIXI.Text('Game Over', style); //собственно выводимый текст
         gameOverText.x = width / 2; //центрируем относительно экрана
